--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "material-ui-nextjs-ts",
   "version": "5.0.0",
   "private": true,
+  "proxy": "https://zenquotes.io",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -19,14 +20,20 @@
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@mui/material-nextjs": "latest",
+    "@mui/x-charts": "^7.23.1",
+    "@mui/x-data-grid": "^7.23.1",
     "@react-leaflet/core": "^2.1.0",
+    "axios": "^1.7.9",
+    "he": "^1.2.0",
     "leaflet": "^1.9.4",
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "recharts": "^2.14.1"
   },
   "devDependencies": {
+    "@types/he": "^1.2.3",
     "@types/leaflet": "^1.9.14",
     "@types/node": "latest",
     "@types/react": "latest",
