--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "post-update": "echo \"codesandbox preview only, need an update\" && pnpm update --latest"
+    "post-update": "echo \"codesandbox preview only, need an update\" && pnpm update --latest",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@emotion/cache": "latest",
@@ -27,6 +28,7 @@
     "he": "^1.2.0",
     "leaflet": "^1.9.4",
     "next": "^14.0.0",
+    "next-sitemap": "^4.2.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-leaflet": "^4.2.1",
