--- a/auto-commit.yml
+++ b/auto-commit.yml
@@ -1,4 +1,4 @@
-name: Daily Auto Commit
+name: Daily Random Commits
 
 on:
   schedule:
@@ -12,15 +12,20 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Make a dummy change
-        run: echo "Last auto commit: $(date)" > .autocommit.txt
-
-      - name: Commit changes
+      - name: Make random number of commits
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add .autocommit.txt
-          git commit -m "Daily auto commit - $(date)"
+
+          # generiši random broj od 1 do 10
+          COMMITS=$(( ( RANDOM % 10 )  + 1 ))
+          echo "Praviću $COMMITS commitova danas."
+
+          for i in $(seq 1 $COMMITS); do
+            echo "Auto commit $i at $(date)" > .autocommit.txt
+            git add .autocommit.txt
+            git commit -m "Auto commit $i - $(date)"
+          done
 
       - name: Push changes
         run: git push
