--- a/.github/workflows/auto-commit.yml
+++ b/.github/workflows/auto-commit.yml
@@ -46,6 +46,7 @@ jobs:
           # Postavi remote URL sa PAT iz secret-a i push
           git remote remove origin
           git remote add origin https://x-access-token:${{ secrets.DAILY_ACTION_PATH }}@github.com/maredjokic/PortfolioMarkoDjokic.git
+          git pull --rebase origin main
           git push -u origin main
 
       # Debug: potvrdi push
