--- a/.github/workflows/auto-commit.yml
+++ b/.github/workflows/auto-commit.yml
@@ -27,7 +27,7 @@ jobs:
             echo "Secret postoji i može se koristiti."
           fi
 
-      # Commit random broj promena
+      # Commit random broj promena bez konflikata
       - name: Commit random changes
         run: |
           git config user.name "Marko Đokić"
@@ -37,17 +37,20 @@ jobs:
           COMMITS=$(( ( RANDOM % 10 ) + 1 ))
           echo "Praviću $COMMITS commitova danas."
 
+          # Sinhronizuj lokalni branch sa remote-om da izbegnemo konflikte
+          git fetch origin
+          git reset --hard origin/main
+
           for i in $(seq 1 $COMMITS); do
             echo "Auto commit $i at $(date)" > .autocommit.txt
             git add .autocommit.txt
             git commit -m "Auto commit $i - $(date)"
           done
 
-          # Postavi remote URL sa PAT iz secret-a i push
+          # Postavi remote URL sa PAT iz secret-a i forsiraj push
           git remote remove origin
           git remote add origin https://x-access-token:${{ secrets.DAILY_ACTION_PATH }}@github.com/maredjokic/PortfolioMarkoDjokic.git
-          git pull --rebase origin main
-          git push -u origin main
+          git push -f origin main
 
       # Debug: potvrdi push
       - name: Verify push
